<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.hear_word_and_type.app.ui.base.BaseCallback" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CustomTextViewBold"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="serif-monospace"
            android:text="@string/bingo_vocab"
            android:textColor="@color/color_gradient_center"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_bookmarked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/next_button"
            android:onClick="@{(v)->callback.onClick(v)}"
            android:rotation="180"
            android:src="@drawable/ic_arrow"
            app:backgroundTint="@color/color_gradient_center"
            app:tint="@android:color/white"
            tools:ignore="RelativeOverlap" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_bottom"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_speaker"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_speaker" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_rounded_gray_filled_10sdp"
                android:padding="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_word"
                    style="@style/CustomEditText"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/write_word"
                    android:includeFontPadding="false"
                    android:inputType="textCapWords"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="0dp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Perception" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_status"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_6sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_criss_cross" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/gray_light_two"
                android:orientation="horizontal"
                android:padding="@dimen/_15sdp">

                <!--Switch to flip face-->
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_show_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_word"
                    android:theme="@style/SCBSwitch" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_actual_word"
                    style="@style/CustomTextViewBold"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_toEndOf="@+id/switch_show_word"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="Perception" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_bookmark"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{(v)->callback.onClick(v)}"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_bookmark_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:contentDescription="@string/previous_button"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:src="@drawable/ic_arrow"
                app:backgroundTint="@color/color_gradient_center"
                app:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_current_word"
                style="@style/CustomTextViewBold"
                android:layout_centerInParent="true"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                tools:text="1/1063" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_20sdp"
                android:contentDescription="@string/next_button"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:rotation="180"
                android:src="@drawable/ic_arrow"
                app:backgroundTint="@color/color_gradient_center"
                app:tint="@android:color/white"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </RelativeLayout>

</layout>
